[pom] Make sure our global override for argLine is still present